--- a/css/style.css
+++ b/css/style.css
@@ -143,3 +143,42 @@ img {
 .color-golden {
   color: goldenrod;
 }
+
+/* Header Section */
+
+.header{
+    width: 100%;
+    background-color: transparent;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: var(--z-fixed);
+    transition: backgroud 0.3s;
+}
+
+.nav{
+    height: var(--header-height);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav-logo, .nav-toggle{
+    color: goldenrod;
+    display: flex;
+}
+
+.nav-logo{
+    align-items: center;
+    column-gap: 5rem;
+    font-weight: var(--font-bold);
+}
+
+.nav-logo img{
+    width: 1.25rem;
+}
+
+.nav-toggle{
+    font-size: 1.25rem;
+    cursor: pointer;
+}
