--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,14 @@ p{
   background: gold;
 }
 
+.color-green{
+  color: green;
+}
+
+.color-red{
+  color: hsl(0, 80%, 64%);
+}
+
 /* index.html - header - nav */
 
 #header{
@@ -226,6 +234,12 @@ h4{
   align-items: center;
 }
 
+.about-container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .about-content{
   display: block;
   padding-left: 3rem;
@@ -245,11 +259,10 @@ h4{
 
 /* index.html - main section - services */
 
-.service-container{
+.service-container {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  margin: 2rem 3rem 1rem 4rem;
+  justify-content: space-between;
 }
 
 .workout{
@@ -263,16 +276,15 @@ h4{
   transform: translateY(-10px);
 }
 
-.service-item{
-  margin-right: 2rem;
+.service-item {
+  width: 500px;
+  height: 400px;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .service-content{
   display: block;
-}
-
-.service-item:last-child{
-  display: none;
 }
 
 /* index.html - main section - speaciality */
@@ -281,7 +293,85 @@ h4{
   margin-right: 5px;
 }
 
-/* index.html - footer section */
+.speciality{
+  margin-left: 3rem;
+  margin-right: 3rem;
+}
+
+/* index.html - main section - calculate */
+.calculate {
+  padding-bottom: 4rem;
+  background-color: #f8f8f8;
+  text-align: center;
+  margin-top: 1rem;
+}
+
+.calc-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  text-align: left;
+}
+
+.calc-content {
+  max-width: 400px;
+  margin: auto;
+}
+
+.calc-desc {
+  font-size: 1rem;
+  color: #666;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.calc-form {
+  display: grid;
+  gap: 1rem;
+}
+
+.calc-box {
+  position: relative;
+}
+
+.calc-input {
+  width: 100%;
+  background: transparent;
+  padding: 20px;
+  outline: none;
+  border: 1px solid #ccc;
+  color: #333;
+  border-radius: 5px;
+}
+
+.calc-label {
+  position: absolute;
+  right: 1.5rem;
+  top: 1.25rem;
+  color: #333;
+}
+
+.calc-form button {
+  width: 10rem;
+  background-color: #4caf50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.calc-form button:hover {
+  background-color: #45a049;
+}
+
+.calc-msg {
+  margin-top: 1rem;
+  font-weight: bold;
+}
+
+/* index.html - footer section 
 
 .footer-nav ul{
   display: flex;
@@ -297,3 +387,4 @@ h4{
   font-size: 14px;
   margin-left: 15px;
 }
+*/
